# stern-open-ingest

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: ponytail.mdc  stern-open-ingest.mdc
benchmarks/: README.md  run.py
benchmarks/golden/EXAMPLE-state-farm-dec-page/: README.md  meta.yaml  questions.json  source.PLACEHOLDER.txt
docs/: deployment.md  models.md  pipeline.md  running.md
examples/: extract_structured.py  modal_paddle_smoke.py  modal_provider.py  parse_pdf.py
src/: workflow.py
src/tensorlake_docai/extraction/: chunking_functions.py  form_extraction_utils.py  form_filling.py  key_value_extraction_utils.py  structured_extraction_functions.py
src/tensorlake_docai/models/: intermediate_objects.py  layout_objects.py
src/tensorlake_docai/ocr/: README.md  __init__.py  base.py  dots_ocr.py  figure_ocr.py  paddle_ocr_vl.py  utils.py
src/tensorlake_docai/pipeline/: api.py  born_digital.py  file_converter.py  output_formatter.py  routing.py  simple_page_creator.py
src/tensorlake_docai/postprocess/: draw_bboxes.py  formatter.py  header_correction.py
src/tensorlake_docai/prompts/: dotsocr_prompts.py  prompts.py
src/tensorlake_docai/provider_state/: __init__.py  models.py  orchestrator.py  storage.py
src/tensorlake_docai/providers/: model_provider_utils.py
src/tensorlake_docai/queue/: __init__.py  job_store.py  models.py  receiver.py  redis_streams.py  worker.py
src/tensorlake_docai/tables/: table_cell_grounding_utils.py  table_correction.py  table_merging.py
src/tensorlake_docai/vlm/: chart_extraction_utils.py  cloud.py  figure_grounding_utils.py  workflow_images.py
tests/: test_born_digital.py  test_draw_bboxes.py  test_formatter.py  test_imports.py  test_key_value_extraction_utils.py  test_model_provider_utils.py  test_model_provider_utils_async.py  test_ocr_utils.py  test_output_formatter.py  test_paddle_ocr_vl.py  test_parse_pdf_cli.py  test_parse_request.py  test_pipeline_routing.py  test_pipeline_routing_logic.py  test_provider_state.py  test_queue_job_store.py  test_routing.py  test_supported_mime_types.py  test_table_merging.py
